--- a/styles/contact.scss
+++ b/styles/contact.scss
@@ -14,9 +14,15 @@ main {
 .contact {
     max-width: 1100px;
     margin: 0 auto;
+    padding: 0 1rem;
 
-    @media (max-width: 1000px) {
+    @media (max-width: $breakpoint-md) {
         max-width: 800px;
+        padding: 0 2rem;
+    }
+
+    @media (max-width: $breakpoint-sm) {
+        max-width: 480px;
     }
 
     a {
